<resources>
    <string name="app_name">Tastee</string>
    <string name="header_title">Hello!</string>
    <string name="header_subtitle">What would you like to eat today?</string>
    <string name="main_popular_recipe">Popular Recipes</string>
    <string name="main_category">Category</string>
    <string name="main_recent_recipe">Recipe Gallery</string>
    <string name="cookrecipe_servings">Servings</string>
    <string name="cookrecipe_preptime">Prep Time</string>
    <string name="cookrecipe_cooktime">Cook Time</string>
    <string name="cookrecipe_youtube">Watch this video and follow along!</string>
    <string name="cookrecipe_watchvideo">Watch the video</string>
    <string name="cookrecipe_addphoto">Add a Photo</string>
    <string name="cookrecipe_takeaphoto">Take a photo of the finished dish!</string>
    <string name="recipedetail_servings">Servings</string>
    <string name="recipedetail_preptime">Prep Time</string>
    <string name="recipedetail_cooktime">Cook Time</string>
    <string name="detail_cooknow">Cook Now</string>
    <string name="detail_savephoto">Save Photo</string>
    <string name="cooknow_savephoto">Save Photo</string>
    <string name="string_instruction">Instructions</string>
    <string name="string_ingredients">Ingredients</string>
    <string name="text_changephoto">Change Photo</string>
    <string name="toast_photo_uploaded">Photo successfully uploaded</string>
    <string name="toast_empty_photo">Uploaded error, add a photo first</string>
    <string name="toast_permission_denied">Permission Denied</string>
    <string name="main_galleryemptytitle">Your gallery is empty :(</string>
    <string name="main_galleryemptydesc">Start cooking and take a picture of your finished dish!</string>
    <string name="main_nutritiontitle">Nutrition Fact of The Day</string>
    <string name="string_recommendMenu">Recommendation For You</string>
    <string name="string_recommended">Recommended Menu</string>
    <string name="text_playmusic">Play some music while you cook!</string>
    <string name="text_buttonplay">Play</string>
    <string name="text_buttonStop">Stop</string>
    <string name="toast_music_play">Music Playing</string>
    <string name="toast_music_stop">Music Stopped</string>
</resources>
